jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	int Contador;
} RelatorioGerencialRec;

DllImport int ECF_GetNumCRZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCupom(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGNF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGRG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumLoja(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumSerie(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumSerieMFD(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumUltItem(const INTPTR ecfHandle);

DllImport int ECF_GetNumVersao(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetOperador(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPAF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPaginaDeCodigo(const INTPTR ecfHandle);

DllImport int ECF_GetParamDescontoISSQN(const INTPTR ecfHandle);

DllImport int ECF_GetPausaRelatorio(const INTPTR ecfHandle);

DllImport int ECF_GetPoucoPapel(const INTPTR ecfHandle);

DllImport int ECF_GetRelatoriosGerenciais(const INTPTR ecfHandle, RelatorioGerencialRec* relatorio, const int index);

DllImport int ECF_GetRespostaComando(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRFDID(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSubModeloECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSubTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTermica(const INTPTR ecfHandle);

DllImport int ECF_GetTotalAcrescimos(const INTPTR ecfHandle, double* value);