jACBrFramework/jACBrFramework/src/jACBrFramework/interop/ECFInterop.java

	/**
	 * Original signature : <code>int ECF_GetNumCRZ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 276</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumCRZ(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumCRZ(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumCRZ(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCRZ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 276</i>
	 */
	int ECF_GetNumCRZ(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCupom(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 277</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumCupom(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumCupom(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumCupom(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumCupom(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 277</i>
	 */
	int ECF_GetNumCupom(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumECF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 278</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumECF(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumECF(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumECF(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumECF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 278</i>
	 */
	int ECF_GetNumECF(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumGNF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 279</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumGNF(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumGNF(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumGNF(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumGNF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 279</i>
	 */
	int ECF_GetNumGNF(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumGRG(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 280</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumGRG(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumGRG(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumGRG(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumGRG(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 280</i>
	 */
	int ECF_GetNumGRG(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumLoja(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 281</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumLoja(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumLoja(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumLoja(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumLoja(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 281</i>
	 */
	int ECF_GetNumLoja(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumSerie(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 282</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumSerie(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumSerie(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumSerie(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumSerie(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 282</i>
	 */
	int ECF_GetNumSerie(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumSerieMFD(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 283</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumSerieMFD(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumSerieMFD(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumSerieMFD(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumSerieMFD(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 283</i>
	 */
	int ECF_GetNumSerieMFD(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumUltItem(const INTPTR)</code><br>
	 * <i>native declaration : line 284</i>
	 */
	int ECF_GetNumUltItem(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetNumVersao(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 285</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetNumVersao(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetNumVersao(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetNumVersao(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetNumVersao(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 285</i>
	 */
	int ECF_GetNumVersao(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetOperador(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 286</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetOperador(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetOperador(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetOperador(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetOperador(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 286</i>
	 */
	int ECF_GetOperador(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetPAF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 287</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetPAF(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetPAF(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetPAF(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetPAF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 287</i>
	 */
	int ECF_GetPAF(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetPaginaDeCodigo(const INTPTR)</code><br>
	 * <i>native declaration : line 288</i>
	 */
	int ECF_GetPaginaDeCodigo(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetParamDescontoISSQN(const INTPTR)</code><br>
	 * <i>native declaration : line 289</i>
	 */
	int ECF_GetParamDescontoISSQN(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetPausaRelatorio(const INTPTR)</code><br>
	 * <i>native declaration : line 290</i>
	 */
	int ECF_GetPausaRelatorio(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetPoucoPapel(const INTPTR)</code><br>
	 * <i>native declaration : line 291</i>
	 */
	int ECF_GetPoucoPapel(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetRelatoriosGerenciais(const INTPTR, RelatorioGerencialRec*, const int)</code><br>
	 * <i>native declaration : line 292</i>
	 */
	int ECF_GetRelatoriosGerenciais(int ecfHandle, RelatorioGerencialRec relatorio, int index);
	/**
	 * Original signature : <code>int ECF_GetRespostaComando(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 293</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetRespostaComando(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetRespostaComando(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetRespostaComando(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetRespostaComando(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 293</i>
	 */
	int ECF_GetRespostaComando(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetRFDID(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 294</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetRFDID(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetRFDID(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetRFDID(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetRFDID(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 294</i>
	 */
	int ECF_GetRFDID(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetSubModeloECF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 295</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetSubModeloECF(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetSubModeloECF(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetSubModeloECF(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetSubModeloECF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 295</i>
	 */
	int ECF_GetSubModeloECF(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetSubTotal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 296</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetSubTotal(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetSubTotal(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetSubTotal(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetSubTotal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 296</i>
	 */
	int ECF_GetSubTotal(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTermica(const INTPTR)</code><br>
	 * <i>native declaration : line 297</i>
	 */
	int ECF_GetTermica(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetTotalAcrescimos(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 298</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalAcrescimos(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalAcrescimos(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalAcrescimos(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalAcrescimos(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 298</i>
	 */
	int ECF_GetTotalAcrescimos(int ecfHandle, DoubleBuffer value);
